Database functions implementation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,9 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.10.0"
 
+//    GSON
+    implementation 'com.google.code.gson:gson:2.8.5'
+
 //    RETROFIT
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
