--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,5 @@ dependencies {
 
 //    FIREBASE
     implementation 'com.google.firebase:firebase-database:16.0.6'
+    implementation 'com.android.support:support-v4:28.0.0'
 }
