--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:16.1.0'
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.google.firebase:firebase-core:16.0.7'
+
+//    SWIPE LAYOUT
+    implementation "com.daimajia.swipelayout:library:1.2.0@aar"
 }
