--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,8 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+RELEASE_STORE_FILE=keystore
+RELEASE_STORE_PASSWORD=12345678
+RELEASE_KEY_ALIAS=labtests
+RELEASE_KEY_PASSWORD=12345678
